test/e2e/chainsaw/httproute-canary-experiment/resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: httproute-canary-experiment-stable-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: httproute-canary-experiment
---
apiVersion: v1
kind: Service
metadata:
  name: httproute-canary-experiment-canary-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: httproute-canary-experiment
